Fix height and spacing for mobile browsers

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -2,7 +2,6 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #402464;
     color: #fff;
 }
 
@@ -61,7 +60,6 @@ a:focus {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
-
 
 .navbar-brand {
     font-weight: 700;
@@ -133,9 +131,11 @@ a:focus {
 .intro {
     display: table;
     width: 100%;
+	min-height: 100%;
     padding: 100px 0;
     text-align: center;
     color: #402464;
+	background-color: #fff;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -143,7 +143,6 @@ a:focus {
 }
 
 .intro-body {
-	background-color: white;
     display: table-cell;
     vertical-align: middle;
 }
@@ -156,13 +155,13 @@ a:focus {
 
 .brand-heading img{ width:600px; }
 
-.intro-text {
+ 0-text {
     font-size: 18px;
 }
 
 @media(min-width:767px) {
     .intro {
-        height: 100%;
+        min-height: 100%;
         padding: 0;
     }
 
@@ -255,7 +254,8 @@ a:focus {
 }
 
 #about {
-	height: 100%;
+	min-height: 100%;
+	background-color: #402464;
 }
 
 .content-section {
@@ -263,14 +263,13 @@ a:focus {
 }
 
 #careers{
-	padding-top:0px;
+	min-height: 100%;
+	color: #fff;
+    background-color: #8c7ca2;
 }
 .careers-section {
-	height: 100%;
     width: 100%;
     padding-bottom: 50px;
-    color: #fff;
-    background-color: #8c7ca2;
 }
 .benefits li{
 	text-align: left;
@@ -278,7 +277,7 @@ a:focus {
 }
 
 #contact{
-	height: 100%;
+	min-height: 100%;
 	padding-bottom: 200px;
 	background-color: #A7A9AB;
 	width: 100%;
@@ -293,10 +292,6 @@ a:focus {
 @media(min-width:767px) {
     .content-section {
         padding-top: 100px;
-    }
-
-    .careers-section {
-        padding: 100px 0;
     }
 
     #map {
@@ -353,6 +348,32 @@ a:focus {
     ul.banner-social-buttons>li:last-child {
         margin-bottom: 0;
     }
+
+	ul.benefits li {
+		margin-left:0px;
+	}
+	
+	.col-lg-8.col-lg-offset-2{
+		width: 90%;
+		margin-left: 0;
+		margin-right: 0;
+	}
+	
+	.intro{
+		padding: 50px 0;
+	}
+	
+	.brand-heading img {
+		width: 300px;
+	}
+	
+	.navbar-fixed-top, .navbar-fixed-bottom {
+		position: relative;
+	}
+	
+	.intro-body {
+		vertical-align: top;
+	}
 }
 
 ::-moz-selection {
@@ -373,6 +394,10 @@ img::selection {
 
 img::-moz-selection {
     background: 0 0;
+}
+
+.navbar-toggle {
+	color: #402464;
 }
 
 body {
